2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/OutputOptionsPanel.cs, Gui/EditPackagesDialog.cs,
	  Gui/CodeGenerationPanel.cs, Gui/CompilerPanel.cs,
	  CBinding.addin.xml, ProjectPad/ProjectPackagesFolderNodeBuilder.cs,
	  ProjectPad/ProjectPackageNodeBuilder.cs, CBinding.mdp,
	  Parser/TagDatabaseManager.cs,
	  Navigation/ProjectNodeBuilderExtension.cs,
	  Project/CProjectConfiguration.cs, Project/CProjectBinding.cs,
	  Project/CProjectServiceExtension.cs, Project/CProject.cs,
	  gtk-gui/gui.stetic, Compiler/GNUCompiler.cs: New project model
	  changes.

2008-05-08  Michael Hutchinson <mhutchinson@novell.com> 

	* CBinding.addin.xml: Set "isText" attribute on the mimetype
	  definitions.

2008-04-16  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CTextEditorExtension.cs: Track API change.

2008-04-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Parser/TagDatabaseManager.cs: Fixed bug that prevented system tags from
	  being written and parsed.

2008-04-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs, gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/gui.stetic: Made details button unsensitive until a package is
	  selected.

2008-04-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs, CBinding.addin.xml,
	  ProjectPad/ProjectPackageNodeBuilder.cs, Project/CProject.cs: Added a
	  command to the Package context menu to see the details on the package
	  and fixed a bug where packages could not be added to a project.

2008-04-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* CBinding.addin.xml: Commented out a wrong extension point. Will find the
	  correct one later.

2008-04-12  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/PackageDetails.cs, Gui/EditPackagesDialog.cs, CBinding.addin.xml,
	  ProjectPad/ProjectPackagesFolderNodeBuilder.cs,
	  ProjectPad/ProjectPackageNodeBuilder.cs, CBinding.mdp,